--- a/echaloasuerte.conf
+++ b/echaloasuerte.conf
@@ -3,9 +3,8 @@ Listen 8001
 <VirtualHost *:8001>
 	ServerName echaloasuerte.com
 	ServerAlias www.echaloasuerte.com
-	WSGIDaemonProcess echaloasuerte.com processes=2 threads=15 python-path={{ echaloasuerte_root }}//web-app/ display-name=%{GROUP}
+	WSGIDaemonProcess echaloasuerte.com processes=2 threads=15 python-path={{ echaloasuerte_app }}:{{ echaloasuerte_venv }}lib/python2.7/site-packages:{{ echaloasuerte_venv }}/lib/python2.7 display-name=%{GROUP}
 	WSGIProcessGroup echaloasuerte.com
-	WSGIPythonPath {{ echaloasuerte_app }}:{{ echaloasuerte_venv }}
 	WSGIScriptAlias / {{ echaloasuerte_root }}//web-app/echaloasuerte.wsgi
 	Alias /media {{ echaloasuerte_root }}//media
 	Alias /static {{ echaloasuerte_root }}//static
