--- a/jenkins.yml
+++ b/jenkins.yml
@@ -16,6 +16,7 @@
     apt: name={{ item }} state=installed force=yes
     with_items:
     - jenkins
+    - ansible
 
 
   - service: name=jenkins state=started
