--- a/echaloasuerte.yml
+++ b/echaloasuerte.yml
@@ -18,7 +18,7 @@
   - pip: name=django-crispy-forms virtualenv={{ echaloasuerte_venv }}
   - pip: name=pytz
 
-  - git: repo=git://github.com/etcaterva/EchaloASuerte.git dest={{ echaloasuerte_app }} update=yes accept_hostkey=True
+  - git: repo=git://github.com/etcaterva/EchaloASuerte.git dest={{ echaloasuerte_app }} update=yes accept_hostkey=True force=yes
 
   - name: Add virtualenv info in echaloasuerte.wsgi
     template: src=echaloasuerte/echaloasuerte.wsgi dest={{ echaloasuerte_app }}/echaloasuerte.wsgi
