--- a/mongodb.yml
+++ b/mongodb.yml
@@ -8,37 +8,60 @@
     mongodb_admin_password: PASSSWORRRDD
   tasks:
 
-#  This user/group is created by default
-#  - name: Create the mongodb user
-#    user: name=mongodb comment="MongoD"
-
 
 # This apt_key may not be right
-  - apt_key: keyserver=hkp://keyserver.ubuntu.com:80 id=7F0CEB10
-  - apt_repository: repo='deb http://repo.mongodb.org/apt/ubuntu trusty/mongodb-org/3.0 multiverse' state=present
+  - apt_key:
+      keyserver: hkp://keyserver.ubuntu.com:80 id=7F0CEB10
+  - apt_repository:
+      repo: deb http://repo.mongodb.org/apt/ubuntu trusty/mongodb-org/3.0 multiverse
+      state: present
   - name: Install the mongodb package
-    apt: name={{ item }} state=installed force=yes
+    apt:
+      name: "{{ item }}"
+      state: installed
+      force: yes
     with_items:
     - mongodb-org
     - python-pip
 
   - name: Install the latest pymongo package
-    pip: name=pymongo state=latest use_mirrors=no
+    pip:
+      name: pymongo
+      state: latest
+      use_mirrors: no
 
   - name: Create the data directory for the namenode metadata
-    file: path={{ item }} owner=mongodb group=mongodb state=directory
+    file:
+      path: "{{ item }}"
+      owner: mongodb
+      group: mongodb
+      state: directory
     with_items:
     - "{{ mongodb_datadir_prefix }}/db"
     - "{{ mongodb_datadir_prefix }}/log"
 
   - name: Fix datadir owner
-    file: path={{ datadir }} owner=root group=root state=directory
+    file:
+      path: "{{ datadir }}"
+      owner: root
+      group: root
+      state: directory
 
-  - template: src=mongodb/mongod.conf dest=/etc/mongod.conf
+  - template:
+      src: mongodb/mongod.conf
+      dest: /etc/mongod.conf
     notify:
     - restart mongod
 
-  - mongodb_user: database=admin name={{ mongodb_admin_user }} password={{ mongodb_admin_password }} roles='userAdminAnyDatabase' state=present
+  - mongodb_user:
+      database: admin
+      name: "{{ mongodb_admin_user }}"
+      password: "{{ mongodb_admin_password }}"
+      roles: userAdminAnyDatabase
+      state: present
   handlers:
     - name: restart mongod
-      service: name=mongod state=restarted
+      service:
+        name: mongod
+        state: restarted
+        sleep: 5
