Fix apache config

--- a/echaloasuerte_legacy/apache_website.conf
+++ b/echaloasuerte_legacy/apache_website.conf
@@ -1,20 +1,38 @@
-#Listen 80
-<Directory {{ app_root_dir }}/app>
-    Options Indexes FollowSymLinks
-    AllowOverride None
-    Require all granted
-</Directory>
+
+#<VirtualHost *:80>
+#	ServerAdmin webmaster@localhost
+#	DocumentRoot /var/www/html
+#
+#	ErrorLog ${APACHE_LOG_DIR}/error.log
+#	CustomLog ${APACHE_LOG_DIR}/access.log combined
+#</VirtualHost>
 
 <VirtualHost *:80>
-	ServerName echaloasuerte.com
-	ServerAlias www.echaloasuerte.com
-
-    DocumentRoot /data/apache/serve/echaloasuerte_legacy/app/web-2011
-	<Directory {{ app_root_dir }}/app/web-2011>
-		Order allow,deny
-		Allow from all
-	    Require all granted
-	</Directory>
-	CustomLog {{ app_root_dir }}/logs/custom.log combined
-	ErrorLog {{ app_root_dir }}/logs/error.log
+    ServerName pickforme.net
+    ServerAlias www.pickforme.net 2011.pickforme.net
+	ServerAdmin webmaster@localhost
+    DocumentRoot {{ app_root_dir }}/app/web-2011/en/
+	ErrorLog {{ app_root_dir }}/logs/en_error.log
+	CustomLog {{ app_root_dir }}/logs/en_access.log combined
+    <Directory {{ app_root_dir }}/app/web-2011/>
+        Options Indexes FollowSymLinks
+        AllowOverride None
+        Require all granted
+    </Directory>
 </VirtualHost>
+
+<VirtualHost *:80>
+    ServerName echaloasuerte.com
+    ServerAlias www.echaloasuerte.com 2011.echaloasuerte.com
+	ServerAdmin webmaster@localhost
+    DocumentRoot {{ app_root_dir }}/app/web-2011/
+	ErrorLog {{ app_root_dir }}/logs/es_error.log
+	CustomLog {{ app_root_dir }}/logs/es_access.log combined
+    <Directory {{ app_root_dir }}/app/web-2011/>
+        Options Indexes FollowSymLinks
+        AllowOverride None
+        Require all granted
+    </Directory>
+</VirtualHost>
+
+# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
