Improve echaloasuerte legacy config
- Serve 2009 and 2011

--- a/echaloasuerte_legacy.yml
+++ b/echaloasuerte_legacy.yml
@@ -2,7 +2,8 @@
 - hosts: PROD
   remote_user: root
   vars:
-    app_root_dir: "/data/apache/serve/echaloasuerte_2011"
+    web_2009_dir: "/data/apache/serve/echaloasuerte/2009/"
+    web_2011_dir: "/data/apache/serve/echaloasuerte/2011/"
   tasks:
 
   - name: Install packages needed from apt
@@ -18,15 +19,20 @@
     - python-mysqldb
     - php5-mysql
 
-  - name: Create a database user
-    mysql_user: name=root password=toor priv=*.*:ALL host=localhost state=present login_user=root login_password=toor
+  - name: Remove apache default
+    file:
+        path: "/etc/apache2/sites-enabled/000-default.conf"
+        state: absent
+
+  - name: Create a database user (for the first run only)
+    mysql_user: name=root password=toor priv=*.*:ALL host=localhost state=present
+    ignore_errors: yes
 
   - name: Create a new database
     mysql_db: name=echaloasuerte state=present collation=utf8_general_ci login_user=root login_password=toor
 
   - name: Create tables
     shell: cat echloasuerte_legacy/create_db.sql | mysql -u root -ptoor echaloasuerte
-
 
   - name: Create echaloasuerte application tree
     file:
@@ -35,13 +41,10 @@
       owner: www-data
       recurse: yes
     with_items:
-    - "{{ app_root_dir }}/logs"
-    - "{{ app_root_dir }}/app"
-
-  - name: Remove apache default
-    file:
-        path: "/etc/apache2/sites-enabled/000-default.conf"
-        state: absent
+    - "{{ web_2011_dir }}/logs"
+    - "{{ web_2011_dir }}/app"
+    - "{{ web_2009_dir }}/logs"
+    - "{{ web_2009_dir }}/app"
 
   - name: Clone/update repository in {{ app_root_dir }}
     git:
@@ -58,8 +61,10 @@
       owner: www-data
       recurse: yes
     with_items:
-    - "{{ app_root_dir }}/logs"
-    - "{{ app_root_dir }}/app"
+    - "{{ web_2011_dir }}/logs"
+    - "{{ web_2011_dir }}/app"
+    - "{{ web_2009_dir }}/logs"
+    - "{{ web_2009_dir }}/app"
 
   - name: Create the apache config file
     template:
