Improve echaloasuerte legacy config
- Serve 2009 and 2011

--- a/echaloasuerte_legacy.yml
+++ b/echaloasuerte_legacy.yml
@@ -2,7 +2,10 @@
 - hosts: PROD
   remote_user: root
   vars:
-    app_root_dir: "/data/apache/serve/echaloasuerte_2011"
+    root_app_dir: "/data/apache/serve/echaloasuerte/legacy/app/"
+    root_log_dir: "/data/apache/serve/echaloasuerte/legacy/log/"
+    web_2011_dir: "/data/apache/serve/echaloasuerte/legacy/app/web-2011/"
+    web_2009_dir: "/data/apache/serve/echaloasuerte/legacy/app/web-2009/"
   tasks:
 
   - name: Install packages needed from apt
@@ -18,8 +21,14 @@
     - python-mysqldb
     - php5-mysql
 
-  - name: Create a database user
-    mysql_user: name=root password=toor priv=*.*:ALL host=localhost state=present login_user=root login_password=toor
+  - name: Remove apache default
+    file:
+        path: "/etc/apache2/sites-enabled/000-default.conf"
+        state: absent
+
+  - name: Create a database user (for the first run only)
+    mysql_user: name=root password=toor priv=*.*:ALL host=localhost state=present
+    ignore_errors: yes
 
   - name: Create a new database
     mysql_db: name=echaloasuerte state=present collation=utf8_general_ci login_user=root login_password=toor
@@ -27,6 +36,13 @@
   - name: Create tables
     shell: cat echloasuerte_legacy/create_db.sql | mysql -u root -ptoor echaloasuerte
 
+  - name: Clone/update repository in {{ root_app_dir }}
+    git:
+      repo: git://github.com/etcaterva/Echaloasuerte_legacy.git
+      dest: "{{ root_app_dir }}"
+      update: yes
+      accept_hostkey: True
+      force: yes
 
   - name: Create echaloasuerte application tree
     file:
@@ -35,21 +51,10 @@
       owner: www-data
       recurse: yes
     with_items:
-    - "{{ app_root_dir }}/logs"
-    - "{{ app_root_dir }}/app"
-
-  - name: Remove apache default
-    file:
-        path: "/etc/apache2/sites-enabled/000-default.conf"
-        state: absent
-
-  - name: Clone/update repository in {{ app_root_dir }}
-    git:
-      repo: git://github.com/etcaterva/Echaloasuerte_legacy.git
-      dest: "{{ app_root_dir }}/app"
-      update: yes
-      accept_hostkey: True
-      force: yes
+    - "{{ root_app_dir }}"
+    - "{{ root_log_dir }}"
+    - "{{ root_log_dir }}/2009"
+    - "{{ root_log_dir }}/2011"
 
   - name: Fix owners of echaloasuerte application tree
     file:
@@ -58,8 +63,8 @@
       owner: www-data
       recurse: yes
     with_items:
-    - "{{ app_root_dir }}/logs"
-    - "{{ app_root_dir }}/app"
+    - "{{ root_app_dir }}"
+    - "{{ root_log_dir }}"
 
   - name: Create the apache config file
     template:
