--- a/echaloasuerte_legacy/apache_website.conf
+++ b/echaloasuerte_legacy/apache_website.conf
@@ -1,20 +1,13 @@
 
-#<VirtualHost *:80>
-#	ServerAdmin webmaster@localhost
-#	DocumentRoot /var/www/html
-#
-#	ErrorLog ${APACHE_LOG_DIR}/error.log
-#	CustomLog ${APACHE_LOG_DIR}/access.log combined
-#</VirtualHost>
-
 <VirtualHost *:80>
-    ServerName pickforme.net
-    ServerAlias www.pickforme.net 2011.pickforme.net
+	#Pickforme english
+    ServerName 2011.pickforme.net
+    ServerAlias www.pickforme.net pickforme.net
 	ServerAdmin webmaster@localhost
-    DocumentRoot {{ app_root_dir }}/app/web-2011/en/
-	ErrorLog {{ app_root_dir }}/logs/en_error.log
-	CustomLog {{ app_root_dir }}/logs/en_access.log combined
-    <Directory {{ app_root_dir }}/app/web-2011/>
+    DocumentRoot {{ web_2011_dir }}/en/
+	ErrorLog {{ root_log_dir }}/2011/en_error.log
+	CustomLog {{ root_log_dir }}/2011/en_access.log combined
+    <Directory {{ web_2011_dir }}>
         Options Indexes FollowSymLinks
         AllowOverride None
         Require all granted
@@ -22,13 +15,26 @@
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName echaloasuerte.com
-    ServerAlias www.echaloasuerte.com 2011.echaloasuerte.com
+    ServerName 2011.echaloasuerte.com
+    ServerAlias www.echaloasuerte.com echaloasuerte.com
 	ServerAdmin webmaster@localhost
-    DocumentRoot {{ app_root_dir }}/app/web-2011/
-	ErrorLog {{ app_root_dir }}/logs/es_error.log
-	CustomLog {{ app_root_dir }}/logs/es_access.log combined
-    <Directory {{ app_root_dir }}/app/web-2011/>
+    DocumentRoot {{ web_2011_dir }}
+	ErrorLog {{ root_log_dir }}/2011/es_error.log
+	CustomLog {{ root_log_dir }}/2011/es_access.log combined
+    <Directory {{ web_2011_dir }}>
+        Options Indexes FollowSymLinks
+        AllowOverride None
+        Require all granted
+    </Directory>
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName 2009.echaloasuerte.com
+	ServerAdmin webmaster@localhost
+    DocumentRoot {{ web_2009_dir }}
+	ErrorLog {{ root_log_dir }}/2009/es_error.log
+	CustomLog {{ root_log_dir }}/2009/es_access.log combined
+    <Directory {{ web_2009_dir }}>
         Options Indexes FollowSymLinks
         AllowOverride None
         Require all granted
