Update packages cache when using apt module

--- a/jenkins.yml
+++ b/jenkins.yml
@@ -20,6 +20,7 @@
     apt:
       name: "{{ item }}"
       state: installed
+      update-cache: yes
       force: yes
     with_items:
     - jenkins
