Add dns names to django version

--- a/roles/echaloasuerte_django/templates/echaloasuerte.conf
+++ b/roles/echaloasuerte_django/templates/echaloasuerte.conf
@@ -1,8 +1,8 @@
-Listen 8001
+Listen 80
 
-<VirtualHost *:8001>
-	ServerName echaloasuerte.com
-	ServerAlias www.echaloasuerte.com
+<VirtualHost *:80>
+	ServerName dev.echaloasuerte.com
+	ServerAlias dev.pickfome.net
 	WSGIDaemonProcess echaloasuerte.com processes=2 threads=15 python-path={{ echaloasuerte_app }}:{{ echaloasuerte_venv }}lib/python2.7/site-packages:{{ echaloasuerte_venv }}/lib/python2.7 display-name=%{GROUP}
 	WSGIProcessGroup echaloasuerte.com
 	WSGIScriptAlias / {{ echaloasuerte_root }}//web-app/echaloasuerte.wsgi
