--- a/roles/echaloasuerte_django/templates/echaloasuerte.conf
+++ b/roles/echaloasuerte_django/templates/echaloasuerte.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
-	ServerName dev.echaloasuerte.com
-	ServerAlias dev.pickfome.net
+	ServerName beta.echaloasuerte.com
+	ServerAlias beta.pickfome.net dev.pickforme.net dev.echaloasuerte.com # pickforme.net echaloasuerte.com www.pickforme.net www.echaloasuerte.com
 	WSGIDaemonProcess echaloasuerte.com processes=2 threads=15 python-path={{ echaloasuerte_app }}:{{ echaloasuerte_venv }}lib/python2.7/site-packages:{{ echaloasuerte_venv }}/lib/python2.7 display-name=%{GROUP}
 	WSGIProcessGroup echaloasuerte.com
 	WSGIScriptAlias / {{ echaloasuerte_root }}//web-app/echaloasuerte.wsgi
