Fix domains. Add prod. subdomain and add beta to 2011 version
- Fix root domain bug
- Add prod subdomain
- Add beta subdomain too 2011 subdomain

--- a/roles/echaloasuerte_django/templates/echaloasuerte.conf
+++ b/roles/echaloasuerte_django/templates/echaloasuerte.conf
@@ -1,6 +1,7 @@
 <VirtualHost *:80>
 	ServerName beta.echaloasuerte.com
-	ServerAlias beta.pickfome.net dev.pickforme.net dev.echaloasuerte.com # pickforme.net echaloasuerte.com www.pickforme.net www.echaloasuerte.com
+	ServerAlias prod.pickforme.net prod.echaloasuerte.com beta.pickfome.net dev.pickforme.net dev.echaloasuerte.com
+	# pickforme.net echaloasuerte.com www.pickforme.net www.echaloasuerte.com
 	WSGIDaemonProcess echaloasuerte.com processes=2 threads=15 python-path={{ echaloasuerte_app }}:{{ echaloasuerte_venv }}lib/python2.7/site-packages:{{ echaloasuerte_venv }}/lib/python2.7 display-name=%{GROUP}
 	WSGIProcessGroup echaloasuerte.com
 	WSGIScriptAlias / {{ echaloasuerte_root }}//web-app/echaloasuerte.wsgi
