--- a/roles/echaloasuerte_php/templates/apache_website.conf
+++ b/roles/echaloasuerte_php/templates/apache_website.conf
@@ -2,7 +2,7 @@
 <VirtualHost *:80>
 	#Pickforme english
     ServerName 2011.pickforme.net
-    ServerAlias www.pickforme.net pickforme.net
+    ServerAlias beta.2011.pickforme.net www.pickforme.net pickforme.net
 	ServerAdmin webmaster@localhost
     DocumentRoot {{ web_2011_dir }}/en/
 	ErrorLog {{ root_log_dir }}/2011/en_error.log
@@ -16,7 +16,7 @@
 
 <VirtualHost *:80>
     ServerName 2011.echaloasuerte.com
-    ServerAlias www.echaloasuerte.com echaloasuerte.com
+    ServerAlias beta.2011.echaloasuerte.com www.echaloasuerte.com echaloasuerte.com
 	ServerAdmin webmaster@localhost
     DocumentRoot {{ web_2011_dir }}
 	ErrorLog {{ root_log_dir }}/2011/es_error.log
