mongodb: Retry the mongodb user creation
The database has just been restarted, this task may
fail the first time.

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -63,6 +63,10 @@
     password: "{{ mongodb_admin_password }}"
     roles: userAdminAnyDatabase
     state: present
+  register: result_mongodb_user
+  until: not result_mongodb_user|failed
+  retries: 5
+  delay: 1
 
 - copy: src=indexes.js dest=/tmp
 - name: Add mongodb indexes
